--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/sea4.png" />
+  <link rel="icon" type="image/svg+xml" href="/assets/arrow.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- //Android 禁止屏幕旋转 -->
   <!-- <meta name="screen-orientation" content="portrait"> -->
@@ -15,7 +15,7 @@
   <!-- <meta content="email=no" name="format-detection" /> -->
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <title>Meer</title>
+  <title>Archery</title>
 </head>
 
 <body>
